return house page based on color in image

--- a/r.html
+++ b/r.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Gryffindor</title>
+        <title>Ravenclaw</title>
         <link rel="stylesheet" href="test.css">
     </head>
 
