--- a/h.html
+++ b/h.html
@@ -4,13 +4,13 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Gryffindor</title>
+        <title>Hufflepuff</title>
         <link rel="stylesheet" href="test.css">
     </head>
 
     <div align=center>
         <img src=h.png>
-            <p align=center>Better be.... hufflepuff? <br>I find this to be very interesting. potato. <br> blah blah blah more stuff<br>
+            <p align=center>Better be.... Hufflepuff? <br>I find this to be very interesting. potato. <br> blah blah blah more stuff<br>
         </p>
     </div>
     <div id="hufflepuff">
