--- a/s.html
+++ b/s.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Gryffindor</title>
+        <title>Slytherin</title>
         <link rel="stylesheet" href="test.css">
     </head>
 
