--- a/test.html
+++ b/test.html
@@ -5,6 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Sorting Hat</title>
         <link rel="stylesheet" href="test.css">
+        <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+        <script type="text/javascript" src="keys.js"></script>
+        <script type="text/javascript" src="clarifai.js"></script>
     </head>
         <div id="header" align=center>
             <h1 >
@@ -27,11 +30,18 @@
                 So try me on and I will tell you<br /> 
                 Where you ought to be."<br /> 
         </div>
+        <div id="image" class="hide">
+            <img src="" id="imgdisp">
+        </div>
 
         <div id="input">
-            <form>
-            Image:  <input type="text" name="imageFile" accept="image/jpeg" accept="image/x-png">
-            </form>
-            <button type="submit" value="Submit"> Sort</button>
+            <!--<form>-->
+            Image:  <input type="text" id="imgurl" placeholder="Image URL">
+            <!--name="imageFile" accept="image/jpeg" accept="image/x-png"-->
+            <!--</form>-->
+            <button type="submit" value="Submit" onclick="requestSort($('#imgurl').val())"> Sort</button>
         </div>
+        <div id="colors"></div>
+        <div id="dens"></div>
+        <div id="tags"></div>
 </html>
